...
    android:id="@+id/activity_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

    <Spinner
        android:id="@+id/spinner_transport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
...
